2004-10-07  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "eo" (Esperanto) to ALL_LINGUAS.

2004-09-29  Christopher Aillon  <caillon@redhat.com>

       * freedesktop.org.xml.in: Add application/vnd.mozilla.xul+xml and
       make MathML inherit from XML.

2004-09-13  Christophe Fergeau  <teuf@gnome.org>

	* configure.in: Added "ms" (Malay) to ALL_LINGUAS

2004-09-10  Christophe Fergeau  <teuf@gnome.org>

	* configure.in: Added "ja" (Japanese) to ALL_LINGUAS

2004-09-10  Christophe Fergeau  <teuf@gnome.org>

	* configure.in: Added "pl" (Polish) to ALL_LINGUAS.

2004-09-10  Nico R. <n-roeser@gmx.net>

	* configure.in: fix substitution of ALL_CFLAGS and ALL_LIBS

2004-09-08  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "es" (Spanish) to ALL_LINGUAS.

2004-09-06  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "pt" (Portuguese) to ALL_LINGUAS.

	* configure.in: Added "uk" (Ukrainian) to ALL_LINGUAS.

2004-09-04  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "pt_BR" (Brazilian Portuguese) to ALL_LINGUAS.

	* configure.in: Added "eu" (Basque) to ALL_LINGUAS.

2004-09-03  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "bg" (Bulgarian) to ALL_LINGUAS.

2004-09-01  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "sq" (Albanian) to ALL_LINGUAS.

2004-08-31  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Add "zh_CN" (simplified Chinese) to ALL_LINGUAS.

=== shared-mime-info 0.15 ===

2004-08-30  Christophe Fergeau  <teuf@gnome.org>

	* Makefile.am:
	* configure.in: use m4 macros provided by pkg-config instead of using
	  our own

2004-08-30  Christophe Fergeau  <teuf@gnome.org>

	* NEWS:
	* configure.in: raised version number, updated NEWS file

2004-08-27  Ole Laursen  <olau@hardworking.dk>

	* configure.in: Added "el" (Greek) to ALL_LINGUAS.

2004-08-17  Christophe Fergeau  <teuf@gnome.org>

	* mkinstalldirs: add to CVS since it's no longer installed by automake
	  fixes bug #576
