@@ -1562,6 +1562,11 @@ command to generate the output files.
   </mime-type>
   <mime-type type="audio/x-scpls">
     <_comment>MP3 ShoutCast playlist</_comment>
+    <magic priority="50">
+      <match type="string" value="[playlist]" offset="0"/>
+      <match type="string" value="[Playlist]" offset="0"/>
+      <match type="string" value="[PLAYLIST]" offset="0"/>
+    </magic>
     <glob pattern="*.pls"/>
   </mime-type>
   <mime-type type="audio/x-stm">
