@@ -1,3 +1,7 @@
+2004-10-20  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: add magic for audio/x-scpls
+
 2004-10-07  Miloslav Trmac  <mitr@volny.cz>
 
 	* configure.in: Added "eo" (Esperanto) to ALL_LINGUAS.
